# hinkal-store

./: .deepsource.toml  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  backend.bat  docker-compose-local.yml  docker-compose-prod-build.yml  docker-compose-prod-pull.yml  docker-compose-prod.yml  docker-compose.yml  frontend.bat  pyproject.toml  start_site.bat
backend/: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile.prod  Readme.md  data.json  docker-compose.yml  docker.env  manage.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  test.env  tox.ini
backend/api/: serializers.py  urls.py  views.py
backend/backend/: settings.py
backend/config/: .env_template.md  settings.py  urls.py  yasg.py
backend/contact/: messaging_service.py  models.py
backend/contact/migrations/: 0001_initial.py  0002_contact_subject.py  0003_contact_added_date.py  0004_alter_contact_added_date.py  0005_alter_contact_added_date.py  0006_alter_contact_added_date.py  0007_alter_contact_added_date.py  0008_alter_contact_added_date.py  0009_alter_contact_added_date.py  0010_alter_contact_added_date.py  0011_alter_contact_added_date.py
backend/core/management/commands/: cleardb.py  populatedb.py  sadmin.py
backend/docs/: .env_template.md  fixtures.md
backend/fixtures/: data.json  demo_data.json  groups.json  important.txt
backend/goods/: models.py
backend/goods/migrations/: 0001_initial.py  0002_alter_dish_added_date.py  0002_initial.py  0003_alter_dish_added_date.py  0004_alter_dish_added_date.py  0005_alter_dish_options_dish_price_alter_dish_added_date.py  0006_alter_dish_added_date.py  0007_alter_dish_added_date.py  0008_alter_dish_added_date.py  0009_alter_dish_added_date.py  0010_alter_dish_added_date.py  0011_dish_is_active_alter_dish_added_date_and_more.py  0012_alter_dish_added_by_alter_dish_added_date.py  0013_alter_dish_added_date.py
backend/management/: populate.py
backend/orders/: admin.py  models.py
backend/orders/migrations/: 0001_initial.py  0002_alter_order_ordered_date_discount.py  0002_initial.py  0003_rename_order_if_discount_order_id_and_more.py  0004_remove_discount_order_id_order_discount_and_more.py  0005_ordermodifier_discount_added_by_order_comment_and_more.py  0006_remove_order_modifier_order_modifier_and_more.py  0007_discount_description_discount_is_active_and_more.py  0008_order_status_alter_order_ordered_date_and_more.py  0009_remove_order_items_orderitem_order_and_more.py  0010_alter_order_ordered_date.py  0011_alter_discount_added_by_alter_order_comment_and_more.py  0012_alter_order_modifier_alter_order_ordered_date.py  0013_alter_order_modifier_alter_order_ordered_date.py  0014_alter_order_ordered_date_alter_order_status.py  0015_alter_order_ordered_date_alter_order_status.py
backend/src/: apiurls.py  settings.py  urls.py  yasg.py
backend/src/apps/: __init__.py
backend/src/apps/api/: apps.py  serializers.py  urls.py  views.py
backend/src/apps/contact/: admin.py  apps.py  messaging_service.py  models.py
backend/src/apps/contact/api/: serializers.py  viewsets.py
backend/src/apps/contact/migrations/: 0001_contact.py  0001_initial.py  0002_alter_contact_added_date.py  0003_alter_contact_added_date.py  0004_alter_contact_added_date.py  0005_alter_contact_added_date.py  0006_alter_contact_added_date.py  0007_remove_contact_added_date_contact_created_at_and_more.py
backend/src/apps/contact/tests/: test_api.py  test_model.py  test_permissions.py
backend/src/apps/core/: apps.py  decorators.py  env.py  models.py  permissions.py
backend/src/apps/core/testing/: api_clients.py  factories.py
backend/src/apps/core/tests/: test_clients.py  test_decorators.py
backend/src/apps/goods/: admin.py  apps.py  managers.py  models.py
backend/src/apps/goods/api/: serializers.py  viewsets.py
backend/src/apps/goods/migrations/: 0001_goods.py  0001_initial.py  0002_initial.py  0003_alter_dish_added_date.py  (+22 more)
backend/src/apps/orders/: admin.py  apps.py  models.py  signals.py
backend/src/apps/user/: admin.py  apps.py  models.py  serializers.py  signals.py
backend/user/: admin.py  forms.py  models.py
backend/user/migrations/: 0001_initial.py  0002_customuser_image.py  0002_vendor_name.py  0003_customuser_biography_customuser_is_vendor.py  0003_rename_countries_country_alter_country_options.py  0004_alter_useraddress_options.py  0004_countries_useraddress.py  0005_vendor_company_name.py  0006_remove_vendor_name_vendor_biography.py
backend/utils/: envreader.py
backend/utils/testing/: factories.py
(+183 files in other folders)
