[build-system]
requires = ["setuptools>=60.6", "wheel"]
buld-backend = "setuptools.build_neta"

[pytest]
DJANGO_SETTINGS_MODULE = "src.settings"
python_files = "test_*.py *_tests.py tests.py"
cache_dir = "tmp/.pytest_cache"

[mypy]
cache_dir = "tmp/.mypy_cache"
plugins = "mypy_django_plugin.main"
strict_optional = "True"

[mypy.plugins.django-stubs]
django_settings_module = "src.settings"