[metadata]
name = src
description = src
author = dborodin836
license = MIT
licence_file = LICENCE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    src
install_requires =
    asgiref==3.5.1
    Django==4.0.6
    django-cors-headers==3.13.0
    djangorestframework==3.13.1
    Pillow==9.2.0
    psycopg2==2.9.3
    pytz==2022.1
    sqlparse==0.4.2
    tzdata==2022.1
    drf-yasg==1.21.3
    setuptools==63.4.1
python_requires = >=3.6
package_dir =
    =backend
zip_safe = no

[option.package_data]
setuptools = py.typed

[mypy]
cache_dir = "tmp/.mypy_cache"
plugins =
    mypy_django_plugin.main,
    mypy_drf_plugin.main
strict_optional = True
ignore_missing_imports = True
exclude = migrations

[mypy.plugins.django-stubs]
django_settings_module = "src.settings"
