[metadata]
name = src
description = src
author = dborodin836
license = MIT
licence_file = LICENCE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    src
install_requires =
    asgiref==3.6.0
    Django==4.1.7
    django-cors-headers==4.1.0
    djangorestframework==3.13.1
    Pillow==10.0.0
    psycopg2==2.9.5
    pytz==2022.7.1
    sqlparse==0.4.3
    tzdata==2022.7
    drf-yasg==1.21.7
    setuptools==68.2.0
python_requires = >=3.6
package_dir =
    =backend
zip_safe = no

[option.package_data]
setuptools = py.typed
